# klausscc

./: .gitignore  Cargo.toml  count.kbt  package-lock.json
.claude/: settings.json
.github/workflows/: codeql.yml  rust-clippy.yml  rust.yml
doc/: klauss_isa_reference.md
src/: EMULATOR_ISA_SEMANTICS.md  cli.rs  clippy.toml  commands.rs  emulate.rs  files.rs  helper.rs  html_example copy.html  jmptest.code  jmptest.debug  jmptest.kbt  jmptest.kla  labels.rs  macros.rs  main.rs  messages.rs  netload.rs  numbers.code  numbers.debug  numbers.kbt  numbers.kla  opcode_select.vh  opcodes.rs  rustfmt.toml  serial.rs  short.code  short.kbt  short.kla  workspace.code-workspace
src/klacode/: count 2.kbt  count.code  count.kbt  count.kla  hello.code  hello.kbt  hello.kla  hello2.kla  jmptest.code  jmptest.kbt  jmptest.kla  numbers.code  numbers.kbt  numbers.kla  opcode_select with sub heading.html  opcode_select.html  opcode_select.vh  opcode_select_macros.json  opcode_select_opcodes.json  opcode_select_textmate.json  opcode_select_textmate.txt  short.code  short.kbt  short.kla  speed.code  speed.kbt  speed.kla  string_print.kla
src/klatest/: README.md  adventure 2.elf  adventure.c  adventure.code  adventure.elf  adventure.kbt  adventure_assembled.txt  adventure_kbt.txt  all_tests.txt  all_tests.txt_old  cache_bench.c  cache_bench.code  cache_bench.kbt  demo.code  demo.kla  demo_hex.c  demo_hex.code  demo_hex.kbt  demo_hex.kla  echo_upper.c  echo_upper.code  echo_upper.kbt  hello 2.elf  hello.c  hello.code  hello.elf  hello.kbt  hello1.c  hello1.code.txt  hello1.elf  hello1.kbt  hello2.c  hello2.code  hello2.elf  hello2.kbt  hello_elf.txt  hello_kbt.txt  hello_simple.code  hello_simple.kbt  hello_simple.kla  (+118 more)
src/lib/: libc.c  libc.h  libc.kla  libcpre.c  test_64bit.c  uart_stubs.kla  uart_stubs.klaold
target 2/: .rustc_info.json
