[package]
name = "klausscc"
version = "0.1.1"
edition = "2021"
authors = ["Graham jones"]
description = "Assembler for Klauss microcontroller defined in FPGA"
repository = "https://github.com/grahamjonesgs/klausscc.git"
readme = "README.md"
license = "MIT"
keywords = ["assembler"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5"}
chrono = { version = "0.4" }
colored = { version = "3.0"}
itertools = { version = "0.14"}
serialport = { version = "4.6", default-features = false}
tempfile = "3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }