[package]
name = "klausscc"
version = "0.1.2"
edition = "2021"
authors = ["Graham Jones"]
description = "Assembler for Klauss micro controller defined in FPGA"
repository = "https://github.com/grahamjonesgs/klausscc.git"
readme = "README.md"
license = "MIT"
keywords = ["assembler"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5"}
chrono = { version = "0.4" }
colored = { version = "3.0"}
itertools = { version = "0.14"}
serialport = { version = "4.8", default-features = false}
tempfile = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
ctrlc = { version = "3.4" }
crossterm = { version = "0.28" }
nix = { version = "0.31", features = ["term"] }
object = { version = "0.36", default-features = false, features = ["read"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic lints that don't fit a CLI assembler/codec binary
missing_errors_doc       = "allow"
module_name_repetitions  = "allow"
too_many_lines           = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_precision_loss      = "allow"
cast_possible_wrap       = "allow"
# Extension checks run on pre-lowercased names against fixed .kla/.kbt conventions
case_sensitive_file_extension_comparisons = "allow"

# Cherry-picked restriction lints worth keeping (catch real mistakes)
unwrap_used   = "warn"
expect_used   = "warn"
dbg_macro     = "warn"
todo          = "warn"
unimplemented = "warn"